apps/Application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-flask-app
  template:
    metadata:
      labels:
        app: my-flask-app
    spec:
      containers:
      - name: my-flask-app
        image: 292029882946.dkr.ecr.us-east-1.amazonaws.com/react-ci-images:latest
        ports:
         - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 30
        volumeMounts:
        - name: my-pv
          mountPath: /data
      volumes:
      - name: my-pv
        persistentVolumeClaim:
          claimName: my-pvc
